GNOME Bugzilla – Bug 645234
Leaky calls to gdk_device_manager_list_devices()
Last modified: 2011-03-21 14:38:38 UTC
Created attachment 183793 [details] [review] Fix leaking calls to gdk_device_manager_list_devices() gdk_device_manager_list_devices() returns a newly allocated list.
Review of attachment 183793 [details] [review]: Looks good, please commit to master and gtk-3-0