Fix leaking calls to gdk_device_manager_list_devices()

gdk_device_manager_list_devices() returns a newly allocated list.

https://bugzilla.gnome.org/show_bug.cgi?id=645234